infrastructure/sccache/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sccache
  labels:
    app.kubernetes.io/name: sccache
    app.kubernetes.io/part-of: eehub-infra
